# cyberette-sdk-python

./: .gitattributes  .gitignore  README.md  cyberette.py  pyproject.toml
cyberette_sdk/: __init__.py  client.py  errors.py  models.py  utils.py
examples/: basic.py  batch_usage.py  datamodels_usage.py  events_batch.py  events_decorator.py  events_direct.py  upload_folder.py  utils_usage.py
tests/: conftest.py  test_batch.py  test_client.py  test_events.py  test_helpers.py  test_models.py  test_upload_folder.py
