[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberette"
version = "0.1.0"
description = "Python SDK for Your Detection API"
authors = [{name="Your Name"}]
license = "MIT"
dependencies = ["aiohttp"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
