[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberette"
version = "0.1.3"
description = "Python SDK for Cyberette Deepfake Detection"
readme = "README.md"
authors = [{name = "Stefan Saveski"}]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = ["aiohttp", "pydantic"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools]
packages = ["cyberette_sdk"]
